Capstone1/secgroup.tf
resource "aws_security_group" "capstone1-jenkins-master-elb-sg" {
  vpc_id      = aws_vpc.capstone1.id
  name        = "capstone1-jenkins-master-elb-sg"
  description = "Security group for Jenkins master elb"
  # Allow incoming HTTP (port 8080) traffic from the ELB
  ingress {
    description      = "Allow http request from anywhere"
    protocol         = "tcp"
    from_port        = 80
    to_port          = 80
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "Allow https request from anywhere"
    protocol         = "tcp"
    from_port        = 443
    to_port          = 443
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "capstone1-jenkins-master-ec2" {
  name   = "capstone1-jenkins-master-ec2"
  vpc_id = aws_vpc.capstone1.id

  ingress {
    description     = "Allow http request from Load Balancer"
    protocol        = "tcp"
    from_port       = 80 # range of
    to_port         = 80 # port numbers
    security_groups = [aws_security_group.capstone1-jenkins-master-elb-sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
